# pd-xlab

./: .gitmodules  CMakeLists.txt  README.deken.pd  README.md  pd-neimog-help.pd  xlab-help.pd
.github/workflows/: cmake-multi-platform.yml
Abstractions/: c.offonsilence.pd  switch.control~.pd
Abstractions/vst/: c.dragon.pd
Sources/: neimog.cpp  neimog.hpp
Sources/manipulations/: transpose~.cpp
Sources/mir/: bock-onset~.cpp
Sources/mir/onsetsds~/: CMakeLists.txt  onsetsds~.c
Sources/utilities/: infinite.record.cpp  pwin~.c  pwout~.c
resources/: kalman-help.pd  musesampler~-help.pd  onsetsds~-help.pd
resources/Audios/: Readme.md
resources/Research/: onsetsds~-performance.pd
resources/abs/: Kullback-Leibler divergence.pd  c.binaural.pd  c.clone-tabplay~.pd  c.instrument.pd  c.load2play-tabread4.pd  c.load2play.pd  c.midi-in.pd  c.multitab.pd  c.mute.pd  c.pd  c.piano.pd  c.record.pd  c.sounds.pd  c.tabplay~.pd  sf.pd  switch.control~.pd
resources/abs/vst/: c.dragonly.pd  c.fire.pd  c.saf-binauralvr.pd  test-new.pd
resources/ai/: note-identify.pd  py.train.pd_py  train.pd
resources/cmake/: dragonfly.cmake  else.cmake
resources/help/: onsetsds~-help.pd
src/: xlab.cpp  xlab.hpp
src/arrays/: a.append.cpp  a.invert.cpp  a.rotate.cpp  a.sum.cpp
src/manipulations/: transposer~-help.pd
src/mir/: neimog.onset~.cpp
src/mir/onsetsds~/: onsetsds.c  onsetsds~.c
src/statistics/: entropy.cpp  euclidean.cpp  kalman.cpp  kullback-leibler.cpp  renyi.cpp
src/utilities/: switch.control~.cpp
